# Technology_of_programming

.github/workflows/: blank.yml  main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main_test.cpp  realise_tests.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task5/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task5/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp
